--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,1 +1,25 @@
-nav
+<header>
+  <a href="/" class='navlogo'>Sharemade</a>
+  <%# ログイン後に見れるようにする %>
+
+  <%# <span class="dropdown">
+    <button class="btn navpull dropdown-toggle" type="button" data-toggle="dropdown">
+      <i class="far fa-caret-square-down"></i>
+    </button>
+    <ul class="dropdown-menu" role="menu">
+      <li><a href='#'>最新</a></li>
+      <li class="divider"></li>
+      <li><a href='#'>注目</a></li>
+      <li class="divider"></li>
+      <li><a href='#'>ユーザランキング</a></li>
+      <li class="divider"></li>
+      <li><a href='#'>ユーザ一覧</a></li>
+    </ul>
+  </span> %>
+  <span class="btn pull-right navfont">
+    <span>ログイン</span>
+  </span>
+  <span class="btn pull-right text-center navfont signup">
+    <span>アカウント登録</span>
+  </span>
+</header>
