--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,1 +1,74 @@
 @charset "utf-8";
+
+header {
+  height: 50px;
+  background: #2BCDD3;
+  color: #fff;
+}
+
+.navlogo {
+  font-size: 20px;
+  float: left;
+  height: 50px;
+  padding: 10px 0 10px 5%;
+  text-decoration: none;
+  color: #fff;
+}
+
+.navlogo:hover {
+  text-decoration: none;
+  color: #272e2e;
+}
+
+.navpull {
+  margin-top: 7px;
+  padding: 6px;
+  color: #272e2e;
+  font-size: 17px;
+  background: #2BCDD3;
+}
+
+.dropdown-menu {
+  margin-top: 15px;
+}
+
+.navfont {
+  font-size: 12px;
+  margin: 10px 2% 0 0;
+}
+
+.signup {
+  border: 2px solid #fff;
+}
+
+.signup:hover {
+  background: #fff;
+}
+
+.welcomebody {
+  background: #2BCDD3;
+}
+
+.welcome {
+  padding: 50px 10% 200px 10%;
+  color: #fff;
+  background-color: #ffffff;
+  background-image: linear-gradient(0deg, #ffffff 2%, #69f1f7 18%, #2bcdd3 50%);
+}
+
+.welcometitle {
+  font-weight: 700;
+}
+
+.welcomebtn {
+  color: #fff;
+  border-bottom: 2px solid #fff;
+  margin: 20px 30px 0 0;
+  border-radius: 0;
+
+}
+
+.welcomebtn:hover {
+  color: #2bcdd3;
+  background: #fff;
+}
