--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Sharemade</title>
     <%= csrf_meta_tags %>
 
@@ -13,7 +17,8 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container">
+    <%# <div class="<%= 'container' if logged_in %>
+    <div>
       <%= render 'layouts/flash_messages' %>
       <%= yield %>
     </div>
