--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,6 +1,8 @@
 <div class="welcome">
-  <h1 class="welcometitle">Let's share <i class="fas fa-share-alt"></i></h1>
-  <h4>自分で作ったオリジナルのアプリやサイトを共有しよう !</h4>
+  <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
+  <span>みんなの「作った」をシェアする</span>
+
+  <h4 class="welcomecontent">自分で作ったアプリやサイトを共有しよう !</h4>
   
   <a class='btn welcomebtn' href="#">アカウント作成</a>
   <a class='btn welcomebtn' href="#">ログイン</a>
