--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,16 +1,40 @@
 @charset "utf-8";
 
+.margin-top10 {
+  margin-top: 10px;
+}
+
+.margin-top30 {
+  margin-top: 30px;
+}
+
+.color {
+  color: #2BCDD3;
+}
+
+.background {
+  background: #2BCDD3;
+}
+
+.white {
+  color: #fff;
+}
+
 header {
   height: 50px;
   background: #2BCDD3;
   color: #fff;
 }
 
+body {
+  background: #f7f7f7;
+}
+
 .navlogo {
   font-size: 20px;
   float: left;
   height: 50px;
-  padding: 10px 0 10px 5%;
+  padding: 10px 0;
   text-decoration: none;
   color: #fff;
 }
@@ -34,7 +58,7 @@ header {
 
 .navfont {
   font-size: 12px;
-  margin: 10px 2% 0 0;
+  margin: 10px 0 0 15px;
 }
 
 .signup {
@@ -45,15 +69,11 @@ header {
   background: #fff;
 }
 
-.welcomebody {
-  background: #2BCDD3;
-}
-
 .welcome {
   padding: 50px 10% 200px 10%;
   color: #fff;
-  background-color: #ffffff;
-  background-image: linear-gradient(0deg, #ffffff 2%, #69f1f7 18%, #2bcdd3 50%);
+  background-color: #f7f7f7;
+  background-image: linear-gradient(0deg, #f7f7f7 2%, #69f1f7 18%, #2bcdd3 50%);
 }
 
 .welcometitle {
@@ -70,10 +90,20 @@ header {
   border-bottom: 2px solid #fff;
   margin: 20px 30px 0 0;
   border-radius: 0;
-
 }
 
 .welcomebtn:hover {
   color: #2bcdd3;
   background: #fff;
+}
+
+.nomalbtn {
+  color: #2bcdd3;
+  border: 2px solid #2bcdd3;
+  padding: 6px 30px;
+}
+
+.nomalbtn:hover {
+  color: #fff;
+  background: #2bcdd3
 }
