--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,3 +1,9 @@
 <% flash.each do |message_type, message| %>
-  <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% if message_type == 'alert' %>
+    <div class="alert alert-danger text-center"><%= message %></div>
+  <% elsif message_type == 'notice' %>
+    <div class="alart alert-success text-center"><%= message %></div>
+  <% else %>
+    <div class="alert alert-<%= message_type %> text-center"><%= message %></div>
+  <% end %>
 <% end %>
