--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,9 +1,13 @@
-<div class="welcome">
-  <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
-  <span>みんなの「作った」をシェアする</span>
+<% if user_signed_in? %>
+  <p>ログイン中です</p>
+<% else %>
+  <div class="welcome">
+    <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
+    <span>みんなの「作った」をシェアする</span>
 
-  <h4 class="welcomecontent">自分で作ったアプリやサイトを共有しよう !</h4>
-  
-  <a class='btn welcomebtn' href="#">アカウント作成</a>
-  <a class='btn welcomebtn' href="#">ログイン</a>
-</div>
+    <h4 class="welcomecontent">自分で作ったアプリやサイトを共有しよう !</h4>
+    
+    <a class='btn welcomebtn' href="/users/sign_up">アカウント作成</a>
+    <a class='btn welcomebtn' href="/users/sign_in">ログイン</a>
+  </div>
+<% end %>
