--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,6 +61,11 @@ body {
   margin: 10px 0 0 15px;
 }
 
+.signin-navfont {
+  font-size: 12px;
+  margin: 10px 0 0 0;
+}
+
 .signup {
   border: 2px solid #fff;
 }
