add results controller views

--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,5 +1,7 @@
 <% if user_signed_in? %>
-  <p>ログイン中です</p>
+  <p>Sharemadeへようこそ！</p>
+  <p>アプリの使い方説明</p>
+
 <% else %>
   <div class="welcome">
     <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
