--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -3,12 +3,13 @@
   <p>アプリの使い方説明</p>
 
 <% else %>
-  <div class="welcome">
+  <div class="welcome text-center">
     <h1 class="welcometitle">Sharemade <i class="fas fa-share-alt"></i></h1>
     <span>みんなの「作った」をシェアする</span>
-
-    <h4 class="welcomecontent">自分で作ったアプリやサイトを共有しよう !</h4>
-    
+     
+    <h4 class="welcomecontent">自分で作ったアプリやサイトの共有スペース</h4>
+    <h4>みんなの作品を見てみよう !</h4>
+      
     <a class='btn welcomebtn' href="/users/sign_up">アカウント作成</a>
     <a class='btn welcomebtn' href="/users/sign_in">ログイン</a>
   </div>
