--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,10 @@
   margin-top: 10px;
 }
 
+.margin-top20 {
+  margin-top: 20px;
+}
+
 .margin-top30 {
   margin-top: 30px;
 }
@@ -28,6 +32,10 @@ header {
 
 body {
   background: #f7f7f7;
+}
+
+footer {
+  height: 50px;
 }
 
 /* ナビバー */
