--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,26 +17,24 @@
         </ul>
       </span>
 
-    <span class="dropdown pull-right navicon">
-      <button class=" btn dropdown-toggle background" type="button" data-toggle="dropdown">
-        <span class="naviconfont"><i class="fas fa-user-circle"></i> <i class="fas fa-caret-down"></i></span>
-      </button>
-      <ul class="dropdown-menu" role="user">
-        <li>
-          <%= link_to user_path(current_user) do %>
-            <i class="fas fa-user"></i> マイページ</a>
-          <% end %>
-        </li>
-        <li class="divider"></li>
-        <li><a href="/users/edit">アカウント設定</a></li>
-        <li class="divider"></li>
-        <li>
-          <%= link_to 'ログアウト', destroy_user_session_path, class: 'text-center', method: :delete, data: { confirm: "ログアウトしますか？" } %>
-        </li>
-      </ul>
-    </span>
-
-      
+      <span class="dropdown pull-right navicon">
+        <button class=" btn dropdown-toggle background" type="button" data-toggle="dropdown">
+          <span class="naviconfont"><i class="fas fa-user-circle"></i> <i class="fas fa-caret-down"></i></span>
+        </button>
+        <ul class="dropdown-menu" role="user">
+          <li>
+            <%= link_to user_path(current_user) do %>
+              <i class="fas fa-user"></i> マイページ</a>
+            <% end %>
+          </li>
+          <li class="divider"></li>
+          <li><a href="/users/edit">アカウント設定</a></li>
+          <li class="divider"></li>
+          <li>
+            <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" } %>
+          </li>
+        </ul>
+      </span>
 
       <%= link_to new_result_path, class:'white' do %>
         <span class="btn pull-right signin-navfont margin-top10">
