add user show design 途中

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,28 @@
-<h1>Users#show</h1>
-<p>ユーザ詳細</p>
+<div class="row margin-top20">
+
+  <div class="col-sm-3">
+    <div class="panel">
+      <div class="panel-heading partition text-center">
+        <span><%= @user.name %></span>
+      </div>
+      <div class="panel-body">
+        プロフィール
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-9">
+    <span class="btn btn-info">
+      作品  カウント
+    </span>
+    <span class="btn btn-default">
+      いいねした作品 カウント
+    </span>
+    <div class="panel margin-top10">
+      <div class="panel-body">
+        パネルの内容
+      </div>
+    </div>
+  </div>
+
+</div>
