--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,2 +1,46 @@
-<h1>Results#show</h1>
-<p>オリジナル作品詳細</p>
+<div class="row margin-top20">
+
+  <div class="col-sm-9 col-sm-push-3">
+    <div class='panel'>
+      <div class="panel-body result">
+        <div class="border-left">
+          <div class="padding-left">
+            <%= @result.subtitle %>
+            <h3 class="title"><%= @result.title %></h3>
+            URL <%= @result.url %>
+          </div>
+        </div>
+
+        
+        <a href="<%= @result.url %>" target="_blank" class="btn btn-info btn-block margin-top20">作品を見る</a>
+        
+        <div class="margin-top20">
+          <i class="fas fa-user"></i> <%= @result.user.name %>
+        </div>
+
+        <div class="margin-top10">
+          <%= simple_format(@result.detail) %>
+        </div>
+        
+        <% unless @result.github == "" %>
+          <div class="margin-top10">
+            <i class="fab fa-github fa-lg"></i> <a href="<%= @result.github %>" target="_blank"><%= @result.github %></a>
+          </div>
+        <% end %>
+        
+      </div>
+    </div>
+  </div>
+
+  <div class="col-sm-3 col-sm-pull-9">
+    <div class="panel">
+      <div class="panel-heading partition text-center">
+        <span><i class="fas fa-user"></i> 作った人</span>
+      </div>
+      <div class="panel-body">
+        <%= link_to @result.user.name, user_path(@result.user) %>
+      </div>
+    </div>
+  </div>
+
+</div>
