--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
 
   <div class="col-sm-9">
     <span class="btn btn-info">
-      作品  <span class="label label-default"><%= @count_results %></span>
+      作品  <span class="badge"><%= @count_results %></span>
     </span>
     <span class="btn btn-default">
       いいねした作品
