--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,55 +1,74 @@
-<div class="container">
-  <div class='row'>
-    <div class="col-sm-6 col-sm-offset-3">
+<div class='row margin-top20'>
+  <div class="col-sm-6 col-sm-offset-3">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render 'layouts/error_messages', model: f.object %>
 
-      <div class="panel margin-top30">
-        <div class="panel-heading text-center background">
-          <h4 class="white">アカウント設定</h4>
+      <div class="form-group text-center">
+        <%= f.label :current_password do %> 現在のパスワード <span class="label label-danger">必須</span><% end %>
+        <%= f.password_field :current_password, autofocus: true,  autocomplete: "current-password", placeholder: '保存には現在のパスワードが必要です', class: 'form-control', required: true %>
+      </div>
+
+      <div class="panel">
+        <div class="panel-heading text-center background white">
+          <i class="fas fa-user-edit"></i> プロフィール編集
         </div>
+
         <div class="panel-body">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-            <%= render 'layouts/error_messages', model: f.object %>
-
-            <div class="field form-group">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
-            </div>
-
-            <div class="field form-group">
-              <%= f.label :current_password, '現在のパスワード' %><br />
-              <%= f.password_field :current_password, autocomplete: "current-password", class: 'form-control' %>
-            </div>
-
-            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-            <% end %>
-
-            <div class="field form-group">
-              <%= f.label :password %> 
-              <% if @minimum_password_length %>
-                <em>( <%= @minimum_password_length %>文字以上 )</em><br />
-              <% end %>
-              <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: '変更しない場合は空白のままにしてください' %>
-            </div>
-
-            <div class="field form-group">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-            </div>
-
-            <div class="actions text-center">
-              <%= f.submit "変更する", class: 'btn nomalbtn' %>
-            </div>
-          <% end %>
-
-          <div class="text-center">
-            <%= button_to "アカウントを削除する", registration_path(resource_name),
-                           data: { confirm: "アカウントを削除しますか?" }, method: :delete, class: "btn btn-danger margin-top10" %>
+          <div class="form-group">
+            <%= f.label :name, 'ユーザ名' %>
+            <%= f.text_field :name, class: 'form-control'%>
           </div>
 
-          <%= link_to "戻る", :back %>
+          <div class="form-group">
+            <%= f.label :yourself, '自己紹介（最大150文字）' %>
+            <%= f.text_area :yourself, class: 'form-control', rows: 6, placeholder: '改行は反映されません' %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :skill, '言語・スキル' %>
+            <%= f.text_field :skill, class: 'form-control', placeholder: 'html / css / JavaScript / Illustrator'%>
+          </div>
         </div>
       </div>
+
+      <div class="panel margin-top20">
+        <div class="panel-heading text-center background white">
+          アカウント設定
+        </div>
+
+        <div class="panel-body">
+          <div class="field form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autocomplete: "email", class: 'form-control' %>
+          </div>
+
+          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+          <% end %>
+
+          <div class="field form-group">
+            <%= f.label :password %> 
+            <% if @minimum_password_length %>
+              <em>( <%= @minimum_password_length %>文字以上 )</em><br />
+            <% end %>
+            <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: '変更しない場合は空白' %>
+          </div>
+
+          <div class="field form-group">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center">
+        <%= f.submit '保存する', class: 'btn btn-info'%>
+      </div>
+    <% end %>
+
+    <div class="text-center margin-top10">
+      <%= button_to "アカウントを削除する", registration_path(resource_name),
+                    data: { confirm: "アカウントを削除しますか?" }, method: :delete, class: "btn btn-danger margin-top10" %>
     </div>
   </div>
 </div>
