--- a/app/views/results/_results.html.erb
+++ b/app/views/results/_results.html.erb
@@ -3,8 +3,9 @@
       <%= result.subtitle %>
       <h4><%= link_to result.title, result_path(result) %></h4>
       <div class="text-muted">
-        <span>by <%= link_to result.user.name, user_path(result.user) %></span>
-        <span><%= time_ago_in_words(result.created_at) %></span>
+        <span class="margin-right10">by <%= link_to result.user.name, user_path(result.user) %></span>
+        <span class="margin-right10"><%= time_ago_in_words(result.created_at) %></span>
+        <span class="margin-right10"><i class="fas fa-thumbs-up"></i> <%= result.good_users.count %></span>
       </div>
     </div>
   <% end %>
