--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,11 +9,9 @@
         <ul class="dropdown-menu" role="menu">
           <li><a href='/results'><i class="fas fa-share-alt"></i> 最新の作品</a></li>
           <li class="divider"></li>
-          <li><a href='/goods'><i class="fas fa-star"></i> 注目の作品</a></li>
+          <li><a href='/good_ranking'><i class="fas fa-star"></i> 注目の作品</a></li>
           <li class="divider"></li>
-          <li><a href='#'><i class="fas fa-crown"></i> ユーザランキング</a></li>
-          <li class="divider"></li>
-          <li><a href='/users'>ユーザ一覧</a></li>
+          <li><a href='/users'><i class="fas fa-users"></i> ユーザー</a></li>
           <li class="divider"></li>
           <li><a href='/'>Sharemadeの使い方</a></li>
         </ul>
