--- a/app/views/users/_user_show.html.erb
+++ b/app/views/users/_user_show.html.erb
@@ -20,7 +20,7 @@
   <div class="col-sm-9">
     
     <%= link_to user_path(user), style: 'text-decoration: none' do %>
-      <span class="btn btn-default <%= 'btn-info' if current_page?(user_path(user)) %>">
+      <span class="btn btn-default <%= 'btn-success' if current_page?(user_path(user)) %>">
         作品  <span class="badge"><%= user.results.count %></span>
       </span>
     <% end %>
