add comment destroy

--- a/app/views/results/_results.html.erb
+++ b/app/views/results/_results.html.erb
@@ -6,6 +6,7 @@
         <span class="margin-right10">by <%= link_to result.user.name, user_path(result.user) %></span>
         <span class="margin-right10"><%= time_ago_in_words(result.created_at) %></span>
         <span class="margin-right10"><i class="fas fa-thumbs-up"></i> <%= result.good_users.count %></span>
+        <span class="margin-right10"><i class="far fa-comment"></i> <%= result.comments.count %></span>
       </div>
     </div>
   <% end %>
