--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -186,18 +186,28 @@ footer {
 .good  {
   color: #f79b24;
   border: 2px solid #f79b24;
-  padding: 6px 20%;
+  padding: 6px 15%;
 }
 
 .goodnow  {
   color: #f79b24;
   background: #f7ad2438;
   border: 2px solid #f79b24;
-  padding: 6px 20%;
+  padding: 6px 15%;
 }
 
 .good:hover,
 .goodnow:hover {
   color: #f79b24;
   opacity: 0.7;
+}
+
+.comment {
+  padding: 8px 15%;
+}
+
+.box {
+  padding: 20px 35px 15px 35px;
+  border: 1px solid #dfdfdf;
+  border-radius: 5px;
 }
