不具合修正　レイアウト変更

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,10 @@
   margin-bottom: 10px;
 }
 
+.margin-bottom20 {
+  margin-bottom: 20px;
+}
+
 .margin-right10 {
   margin-right: 10px;
 }
@@ -176,7 +180,7 @@ footer {
 }
 
 .border-left {
-  border-left: 5px solid #6ed32b;
+  border-left: 4px solid #2bcdd3;
 }
 
 .padding-left {
