--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -52,29 +52,17 @@
     <%# コメント欄 %>
     <div class="panel">
       <div class="panel-body">
-        <% @comments.each do |comment| %>
-          <% if comment.user == @result.user %>
-            <i class="fas fa-user"></i>
-          <% end %>
-          <%= link_to comment.user.name, user_path(comment.user) %>
-          <span class="pull-right text-muted margin-right10"><%= comment.created_at.strftime('%Y/%m/%d') %></span>
-          <% if comment.user == current_user %>
-            <span class="pull-right margin-right10">
-              <%= link_to comment_path(comment), method: :delete, class: 'text-danger', data: { confirm: '本当に削除しますか？'} do %>
-                <i class="fas fa-trash-alt"></i>
-              <% end %>
-            </span>
-          <% end %>
-          <div class="box margin-bottom10"><%= simple_format(comment.comment) %></div>
-        <% end %>
+        <div id="comment">
+          <%= render 'comments/comments', comments: @comments, result: @result %>
+        </div>
 
-        <%= form_for(@comment) do |f| %>
+        <%= form_for(@comment, remote: true) do |f| %>
           <div class="form-group">
             <%= f.label :comment do %>
-              <i class="far fa-comment"></i> コメントを投稿する
+              <i class="far fa-comment"></i> コメントを投稿する (最大225文字)
             <% end %>
-            <%= render 'layouts/error_messages', model: f.object %>
-            <%= f.text_area :comment, placeholder: 'コメントを入力してください', class: 'form-control', rows: 5, required: true %>
+            <div id="error"></div>
+            <%= f.text_area :comment, id: 'comment_field', placeholder: 'コメントを入力してください', class: 'form-control', rows: 5, required: true %>
           </div>
           <%= hidden_field_tag :result_id, @result.id %>
           <%= f.submit '投稿', class: 'btn btn-info pull-right' %>
