--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,7 +13,7 @@
           <li class="divider"></li>
           <li><a href='/users'><i class="fas fa-users"></i> ユーザー</a></li>
           <li class="divider"></li>
-          <li><a href='/'>Sharemadeの使い方</a></li>
+          <li><a href='/'>Sharemadeについて</a></li>
         </ul>
       </span>
 
