--- a/app/views/toppage/index.html.erb
+++ b/app/views/toppage/index.html.erb
@@ -1,6 +1,5 @@
 <% if user_signed_in? %>
-  <p>Sharemadeへようこそ！</p>
-  <p>アプリの使い方説明</p>
+  <img src="/images/top_about.png" class="img">
 
 <% else %>
   <div class="welcome text-center">
