--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -108,7 +108,7 @@ footer {
 }
 
 .welcome {
-  padding: 50px 40px 200px 40px;
+  padding: 50px 40px 150px 40px;
   color: #fff;
   background-color: #f7f7f7;
   background-image: linear-gradient(0deg, #f7f7f7 2%, #69f1f7 18%, #2bcdd3 50%);
@@ -218,4 +218,8 @@ footer {
 
 .img {
   width: 100%;
+}
+
+.top-content {
+  padding: 20px
 }
