add uploader image

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -216,9 +216,9 @@ footer {
   border-radius: 5px;
 }
 
-.img {
-  width: 100%;
-}
+/* .img {
+  width: 60%;
+} */
 
 .top-content {
   padding: 20px
