--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -18,6 +18,8 @@
           </div>
         </div>
 
+        <%= image_tag @result.image.to_s %>
+
         <div class="margin-top20 margin-bottom20">
           <a href="<%= @result.url %>" target="_blank" class="btn btn-info btn-block">
             <i class="fas fa-external-link-alt"></i> 作品を見る
