--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,10 +46,6 @@ header {
   color: #fff;
 }
 
-body {
-  background: #f7f7f7;
-}
-
 footer {
   height: 50px;
 }
@@ -172,7 +168,7 @@ footer {
 }
 
 .title {
-  margin: 5px 0;
+  margin: 0;
 }
 
 .result {
@@ -185,6 +181,7 @@ footer {
 
 .padding-left {
   padding-left: 10px;
+  margin-bottom: 10px;
 }
 
 .good  {
@@ -216,9 +213,17 @@ footer {
   border-radius: 5px;
 }
 
-/* .img {
-  width: 60%;
-} */
+.img {
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #f1f1f1;
+  box-shadow: 5px 5px 10px -5px #c0c0c0;
+}
+
+.mo_img {
+  max-width: 100%;
+  height: auto;
+}
 
 .top-content {
   padding: 20px
